<resources>
    <string name="app_name">Flighty</string>


    <!-- main activity -->
    <string name="txt_departure_code">Departure Airport</string>
    <string name="txt_arrival_code">Arrival Airport</string>
    <string name="txt_hint_depature_date">Depature date</string>
    <string name="txt_hint_return_date">Return date</string>
    <string name="txt_btn_submit">Search</string>
    <string name="txt_info_validation">An airport code can only have alphanumberic characters.</string>
    <string name="txt_btn_ok">OK</string>
    <string name="txt_title_airport_validation">Airport code</string>
    <string name="txt_date_error">Sorry, return date should be later than departure date.</string>
    <string name="txt_title_error">Oops</string>
    <string name="txt_arrival_airport_error">Sorry, please set an arrival airport code</string>
    <string name="txt_departure_airport_error">Sorry, please set a departure airport code</string>
    <string name="title_activity_flight_list">FlightListActivity</string>
    <string name="txt_query_flights">Query Flight data</string>
    <string name="txt_stops">Stops: %1d</string>
    <string name="txt_inbound_duration">Inbound Duration: %1s hours</string>
    <string name="txt_outbound_duration">Outbound Duration: %1s hours</string>
    <string name="txt_cost">Cost: $%1s</string>
    <string name="unknown">Unknown</string>
    <string name="btn_search_again">Search Again</string>


    <!-- Accessibility -->
    <string name="loading">Loading</string>
</resources>